# rs-matter-embassy

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
_examples/: light.rs  light_eth.rs
examples/: README.md
examples/esp/: Cargo.toml
examples/esp/.cargo/: config.toml
examples/esp32/: Cargo.toml
examples/esp32/.cargo/: config.toml
examples/nrf/: Cargo.toml
examples/nrf/.cargo/: config.toml
examples/rp/: Cargo.toml  build.rs
examples/rp/.cargo/: config.toml
rs-matter-embassy/: Cargo.toml  README.md
rs-matter-embassy/.cargo/: _config.toml  config.toml
rs-matter-embassy/src/: ble.rs  enet.rs  epoch.rs  error.rs  eth.rs  lib.rs  matter.rs  nal.rs  netif.rs  ot.rs  persist.rs  rand.rs  wifi.rs  wireless.rs
rs-matter-embassy/src/wireless/: thread.rs  wifi.rs
src/: ble.rs  error.rs  lib.rs  netif.rs  persist.rs  wireless.rs
src/wireless/: esp.rs
