[package]
name = "rs-matter-embassy"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "embassy"]
description = "Run rs-matter with embassy"
repository = "https://github.com/ivmarkov/rs-matter-embassy"
license = "MIT OR Apache-2.0"
readme = "README.md"
build = "build.rs"
rust-version = "1.78"

[lib]
harness = false

#[patch.'https://github.com/ivmarkov/rs-matter-stack']
#rs-matter-stack = { path = "../rs-matter-stack" }

[patch.crates-io]
rs-matter = { git = "https://github.com/ivmarkov/rs-matter" }
#rs-matter = { path = "../rs-matter/rs-matter" }
#bt-hci = { git = "https://github.com/ivmarkov/bt-hci", branch = "ref-impls" }
#bt-hci = { path = "../bt-hci" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["rs-matter-stack"]

[dependencies]
log = { version = "0.4", default-features = false }
heapless = "0.8"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.6"
embassy-time = "0.4"
embassy-net = { version = "0.6", features = ["proto-ipv4", "proto-ipv6"] }
#embedded-svc = { version = "0.28", default-features = false }
rs-matter = { version = "0.1", default-features = false, features = ["rustcrypto"] }
rs-matter-stack = { git = "https://github.com/ivmarkov/rs-matter-stack", default-features = false, optional = true }
edge-nal = "0.5"
edge-nal-embassy = "0.5"
embedded-storage-async = "0.4.1"
sequential-storage = "3"
#trouble-host = { version = "0.1", git = "https://github.com/ivmarkov/trouble", branch = "last-data2" }
#trouble-host = { version = "0.1", git = "https://github.com/embassy-rs/trouble" }
#trouble-host = { version = "0.1", git = "https://github.com/ivmarkov/trouble" }
trouble-host = { version = "0.1", path = "../trouble/host" }
bt-hci = { version = "0.1", default-features = false }
embedded-io = "0.6"
scopeguard = { version = "1", default-features = false }
esp-hal = { version = "0.23", features = ["esp32"] }
esp-wifi = { version = "0.12", features = ["esp32", "ble", "wifi"] }
static_cell = "2"

[dev-dependencies]
embassy-time-queue-utils = { version = "0.1", features = ["generic-queue-64"] }
static_cell = "2.1"

# [[example]]
# name = "light"
# path = "examples/light.rs"
# required-features = ["examples"]

# [[example]]
# name = "light_eth"
# path = "examples/light_eth.rs"
# required-features = ["examples"]
