[package]
name = "rs-matter-embassy"
version = "0.1.0"
authors = ["ivmarkov <ivan.markov@gmail.com>"]
edition = "2021"
resolver = "2"
categories = ["embedded", "hardware-support"]
keywords = ["matter", "embedded", "embassy"]
description = "Run rs-matter with embassy"
repository = "https://github.com/ivmarkov/rs-matter-embassy"
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.84"

[lib]
harness = false

#[patch.'https://github.com/ivmarkov/rs-matter-stack']
#rs-matter-stack = { git = "https://github.com/ivmarkov//rs-matter-stack.git" }
#rs-matter-stack = { path = "../../rs-matter-stack" }
#[patch.'https://github.com/esp-rs/openthread']
#openthread = { version = "0.1", path = "../../../esp-openthread/openthread" }

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "next" }
#rs-matter = { path = "../../rs-matter/rs-matter" }
#edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net" }
#edge-mdns = { git = "https://github.com/ivmarkov/edge-net" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git" }
#trouble-host = { version = "0.2", git = "https://github.com/embassy-rs/trouble" }
#trouble-host = { version = "0.2", path = "../../../trouble/host" }
cyw43 = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }
cyw43-pio = { version = "0.4", git = "https://github.com/embassy-rs/embassy" }
embassy-rp = { version = "0.4", git = "https://github.com/embassy-rs/embassy" }
embassy-nrf = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.4", git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { version = "0.1", git = "https://github.com/embassy-rs/embassy" }
embassy-net-wiznet = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver-channel = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.7", git = "https://github.com/embassy-rs/embassy" }

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = []
embassy-net = ["dep:embassy-net", "edge-nal-embassy", "openthread?/embassy-net-driver-channel"]
esp = ["esp-wifi", "esp-hal", "openthread?/esp-ieee802154"]
esp32h2 = ["esp-wifi/ble", "esp-hal", "openthread/esp-ieee802154"]
rp = ["cyw43", "cyw43-pio", "embassy-rp", "rand_core"]
nrf = ["embassy-nrf", "rand_core", "nrf-sdc", "nrf-mpsl", "portable-atomic", "openthread?/embassy-nrf"]
log = ["dep:log", "rs-matter-stack/log", "openthread?/log", "embassy-net?/log", "edge-nal-embassy?/log", "trouble-host/log", "cyw43?/log"]
defmt = ["dep:defmt", "rs-matter-stack/defmt", "openthread?/defmt", "embassy-net?/defmt", "edge-nal-embassy?/defmt", "trouble-host/defmt", "cyw43?/defmt", "cyw43-pio?/defmt"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true, features = ["ip_in_core"] }
heapless = "0.8"
enumset = { version = "1", default-features = false }
embassy-futures = "0.1"
embassy-sync = "0.7"
embassy-time = "0.4"
embedded-io = "0.6"
scopeguard = { version = "1", default-features = false }
rs-matter-stack = { git = "https://github.com/ivmarkov/rs-matter-stack", default-features = false, features = ["rustcrypto"] }
static_cell = "2"

embedded-storage-async = "0.4.1"
sequential-storage = "3"

embassy-net = { version = "0.7", optional = true }
edge-nal-embassy = { version = "0.6", optional = true, features = ["proto-ipv4", "proto-ipv6", "multicast", "dhcpv4", "medium-ethernet"] }

trouble-host = { version = "0.2", features = ["gatt"] }
bt-hci = "0.3.2"

openthread = { version = "0.1", git = "https://github.com/esp-rs/openthread", optional = true, features = ["udp", "srp", "edge-nal"] }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for the `esp32*` chips family
esp-wifi = { version = "0.14", optional = true, features = ["ble"] }
esp-hal = { version = "=1.0.0-beta.1", optional = true, features = ["unstable"] }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for the RPi Pico W MCU
cyw43 = { version = "0.3", optional = true, features = ["firmware-logs", "bluetooth"] }
cyw43-pio = { version = "0.4", optional = true }
embassy-rp = { version = "0.4", optional = true, features = ["unstable-pac", "rp2040"] }
rand_core = { version = "0.6.4", optional = true }

# Only necessary when `rs-matter-embassy` is providing extra-sugar for Nordic silicon
embassy-nrf = { version = "0.3.1", optional = true, features = ["time-driver-rtc1", "time", "nrf52840"], default-features = false }
nrf-sdc = { version = "0.1", default-features = false, optional = true, features = ["peripheral", "nrf52840"] }
# TODO: PR upstream a re-export of the `critical-section-impl` feature by `nrf-sdc` and making it enabled by default
nrf-mpsl = { version = "0.1", default-features = false, optional = true, features = ["nrf52840", "critical-section-impl"] }
portable-atomic = { version = "1", optional = true }
