[package]
name = "rs-matter-embassy-esp-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "light_wifi"
harness = false

[[bin]]
name = "light_eth"
harness = false

[[bin]]
name = "light_eth2"
harness = false

[[bin]]
name = "light_thread"
required-features = ["esp32c6"]
harness = false

#[patch.'https://github.com/ivmarkov/rs-matter-stack']
#rs-matter-stack = { path = "../../../rs-matter-stack" }
#[patch.'https://github.com/esp-rs/esp-openthread']
#openthread = { version = "0.1", path = "../../../esp-openthread/openthread" }

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "next" }
#rs-matter = { path = "../../../rs-matter/rs-matter" }
#edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net" }
#edge-mdns = { git = "https://github.com/ivmarkov/edge-net" }
#trouble-host = { version = "0.1", git = "https://github.com/embassy-rs/trouble" }
trouble-host = { version = "0.1", git = "https://github.com/ivmarkov/trouble", branch = "restore-pub" }
#trouble-host = { version = "0.1", path = "../../../trouble/host" }
embassy-sync = { version = "0.7", git = "https://github.com/embassy-rs/embassy" }
embassy-time = { version = "0.4", git = "https://github.com/embassy-rs/embassy" }
embassy-time-driver = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-time-queue-utils = { version = "0.1", git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver = { version = "0.2", git = "https://github.com/embassy-rs/embassy" }
embassy-net-driver-channel = { version = "0.3", git = "https://github.com/embassy-rs/embassy" }
embassy-executor = { version = "0.7", git = "https://github.com/embassy-rs/embassy" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
opt-level = "s"
overflow-checks = false

[features]
default = ["esp32c6"]
esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy/esp32", "esp-println/esp32", "esp-wifi/esp32", "portable-atomic/critical-section"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2", "esp-wifi/esp32c2", "portable-atomic/critical-section"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3", "portable-atomic/unsafe-assume-single-core"]
esp32c6 = ["esp-ieee802154/esp32c6", "esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6", "portable-atomic/critical-section"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3", "esp-wifi/esp32s3", "portable-atomic/critical-section"]

[dependencies]
log = "0.4"
embassy-executor = "0.7"
esp-backtrace = { version = "0.16", features = ["exception-handler", "panic-handler", "println"] }
esp-hal = { version = "=1.0.0-beta.1", features = ["log-04", "unstable"] }
esp-hal-embassy = "0.8"
esp-alloc = "0.8"
esp-println = { version = "0.14", features = ["log-04"] }
esp-wifi = { version = "0.14", features = ["wifi", "ble"] }
esp-ieee802154 = { version = "0.7", optional = true }
esp-bootloader-esp-idf = "0.1"
bt-hci = { version = "0.3.2" }
heapless = "0.8"
rs-matter-embassy = { path = "../../rs-matter-embassy", features = ["esp", "embassy-net", "openthread", "log"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }
embassy-sync = "0.7"
embassy-futures = "0.1"
embassy-time = "0.4"
static_cell = "2"
portable-atomic = "1"
