[package]
name = "rs-matter-embassy-esp-examples"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "light_wifi"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_eth"
required-features = ["wifi"]
harness = false

[[bin]]
name = "light_eth2"
required-features = ["thread"]
harness = false

[[bin]]
name = "light_thread"
required-features = ["thread"]
harness = false

#[patch.'https://github.com/ivmarkov/rs-matter-stack']
#rs-matter-stack = { git = "https://github.com/ivmarkov//rs-matter-stack.git" }
#rs-matter-stack = { path = "../../../rs-matter-stack" }
[patch.'https://github.com/esp-rs/openthread']
openthread = { git = "https://github.com/ivmarkov/esp-openthread.git", branch = "next" }
#openthread = { version = "0.1", path = "../../../esp-openthread/openthread" }

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "next" }
#rs-matter = { path = "../../../rs-matter/rs-matter" }
#edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net" }
#edge-mdns = { git = "https://github.com/ivmarkov/edge-net" }
#trouble-host = { version = "0.2", git = "https://github.com/embassy-rs/trouble" }
#trouble-host = { version = "0.2", path = "../../../trouble/host" }

[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "z"

[profile.release]
codegen-units = 1 # LLVM can perform better optimizations using a single thread
debug = 2
debug-assertions = false
opt-level = "s"
overflow-checks = false

[features]
default = ["esp32c6"]
esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy/esp32", "esp-println/esp32", "esp-wifi/esp32", "esp-bootloader-esp-idf/esp32", "portable-atomic/critical-section", "wifi"]
esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy/esp32c2", "esp-println/esp32c2", "esp-wifi/esp32c2", "esp-bootloader-esp-idf/esp32c2", "portable-atomic/critical-section", "wifi"]
esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy/esp32c3", "esp-println/esp32c3", "esp-wifi/esp32c3", "esp-bootloader-esp-idf/esp32c3", "portable-atomic/unsafe-assume-single-core", "wifi"]
esp32c6 = ["esp-ieee802154/esp32c6", "esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy/esp32c6", "esp-println/esp32c6", "esp-wifi/esp32c6", "esp-bootloader-esp-idf/esp32c6", "portable-atomic/critical-section", "wifi", "thread"]
esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy/esp32s3", "esp-println/esp32s3", "esp-wifi/esp32s3", "esp-bootloader-esp-idf/esp32s3", "portable-atomic/critical-section", "wifi"]
esp32h2 = ["esp-ieee802154/esp32h2", "esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy/esp32h2", "esp-println/esp32h2", "esp-wifi/esp32h2", "esp-bootloader-esp-idf/esp32h2", "portable-atomic/critical-section", "thread"]
wifi = ["rs-matter-embassy/embassy-net"]
thread = ["rs-matter-embassy/openthread"]

[dependencies]
log = "0.4"
embassy-executor = "0.7"
esp-backtrace = { version = "0.17", features = ["exception-handler", "panic-handler", "println"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["log-04", "unstable"] }
esp-hal-embassy = "0.9"
esp-alloc = "0.8"
esp-println = { version = "0.15", features = ["log-04"] }
esp-wifi = { version = "0.15", features = ["ble", "log-04"] }
esp-ieee802154 = { version = "0.8", optional = true }
esp-bootloader-esp-idf = { version = "0.2", features = ["log-04"] }
bt-hci = { version = "0.3.2" }
heapless = "0.8"
rs-matter-embassy = { path = "../../rs-matter-embassy", features = ["esp", "log"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["utoa", "strtoul"] }
embassy-sync = "0.7"
embassy-futures = "0.1"
embassy-time = "0.4"
static_cell = "2"
portable-atomic = "1"
