[package]
name = "rs-matter-embassy-nrf-examples"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "light_thread"
harness = false

[[bin]]
name = "light_eth"
harness = false

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
debug = 2
debug-assertions = false
lto = "fat"
codegen-units = 1
incremental = false
overflow-checks = false

#[patch.'https://github.com/ivmarkov/rs-matter-stack']
rs-matter-stack = { git = "https://github.com/ivmarkov//rs-matter-stack.git" }
#rs-matter-stack = { path = "../../../rs-matter-stack" }
#[patch.'https://github.com/esp-rs/openthread']
#openthread = { git = "https://github.com/ivmarkov/esp-openthread.git", branch = "next" }
#openthread = { version = "0.1", path = "../../../esp-openthread/openthread" }

[patch.crates-io]
#rs-matter = { git = "https://github.com/project-chip/rs-matter" }
rs-matter = { git = "https://github.com/ivmarkov/rs-matter", branch = "next" }
#rs-matter = { path = "../../../rs-matter/rs-matter" }
#edge-nal = { git = "https://github.com/ivmarkov/edge-net" }
#edge-nal-embassy = { git = "https://github.com/ivmarkov/edge-net" }
#edge-mdns = { git = "https://github.com/ivmarkov/edge-net" }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc.git" }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc.git" }
#trouble-host = { version = "0.2", git = "https://github.com/embassy-rs/trouble" }
#trouble-host = { version = "0.2", path = "../../../trouble/host" }

[dependencies]
embassy-executor = { version = "0.7", default-features = false, features = ["task-arena-size-65536", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4", default-features = false, features = ["defmt", "defmt-timestamp-uptime-ms"] }
embassy-nrf = { version = "0.5", features = ["defmt", "time-driver-rtc1", "time", "nrf52840"], default-features = false }
embassy-futures = "0.1.1"
embassy-sync = { version = "0.7", features = ["defmt"] }
defmt = "0.3"
embedded-alloc = "0.6"
rs-matter-embassy = { path = "../../rs-matter-embassy", features = ["nrf", "openthread", "defmt"] }
tinyrlibc = { version = "0.5", default-features = false, features = ["strstr", "strcmp", "isupper", "utoa", "strtoul"] }

cortex-m = "0.7.6"
cortex-m-rt = "0.7"

rtt-target = { version = "0.6", features = ["defmt"] }
panic-rtt-target = "0.2"

static_cell = "2"
portable-atomic = { version = "1.5", features = ["critical-section"] }
